필터 탭 정렬방식 구현 완료. 조회기간 선택하여 버튼 클릭 구현 및 페이지네이션 오류. 확인예정

--- a/src/main/resources/templates/customer/inquiry.html
+++ b/src/main/resources/templates/customer/inquiry.html
@@ -42,10 +42,10 @@
         <section class="inquiry-tabs">
             <nav>
                 <ul>
-                    <li class="tab active" onclick="filterTab('all')">전체</li>
-                    <li class="tab" onclick="filterTab('received')">접수 완료</li>
-                    <li class="tab" onclick="filterTab('admin-check')">관리자 확인</li>
-                    <li class="tab" onclick="filterTab('completed')">답변 완료</li>
+                    <li class="tab active" value="all">전체</li>
+                    <li class="tab" value="recieved">접수 완료</li>
+                    <li class="tab" value="waiting">관리자 확인</li>
+                    <li class="tab" value="completed">답변 완료</li>
                 </ul>
             </nav>
         </section>
