--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -7,6 +7,7 @@
     <!-- 공통 CSS -->
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- 세션 상태에 따른 헤더 삽입 -->
