발주요청 페이지요~

--- a/src/main/resources/templates/admin/adminManager.html
+++ b/src/main/resources/templates/admin/adminManager.html
@@ -94,7 +94,7 @@
   
     <div class="content">
       <div class="title">
-        <h1>재고관리</h1><br><br>
+        <h1>재고관리<hr></h1>
       </div>
   
       <div class="graph-box">
@@ -109,10 +109,13 @@
         <div>
           <input type="text" id="searchText" class= "hidden">
         </div>
-
-        <ul id="resultArea">
-
-        </ul>
+        <label class="view-dropdown">
+          <select id="viewSelect" >
+              <option value="10">10개</option>
+              <option value="20">20개</option>
+              <option value="50">50개</option>
+          </select>
+        </label>
       </div>
   
       <div class="list">
@@ -139,114 +142,6 @@
               <th>000</th>
               <th>KH출판사</th>
               <th>40 / 100</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
-              <th>2024.11.11</th>
-              <th>N</th>
-              <th>
-                <button>등록여부 수정</button>
-              </th>
-            </tr>
-            <tr>
-              <th>1</th>
-              <th>이것이 JAVA!</th>
-              <th>000</th>
-              <th>KH출판사</th>
-              <th>25,000원</th>
               <th>2024.11.11</th>
               <th>N</th>
               <th>
