--- a/src/main/resources/templates/admin/adminNotice.html
+++ b/src/main/resources/templates/admin/adminNotice.html
@@ -122,7 +122,7 @@
         <tbody class="nticeContent"> 
           <th:block th:if= "${#lists.isEmpty(noticeList)}">
             <tr>
-              <th colspan="6">FAQ로 등록된 자료가 없습니다.</th>
+              <th colspan="6">공지사항으로 등록된 자료가 없습니다.</th>
             </tr>
           </th:block>
 
