--- a/src/main/resources/static/css/admin/adminManager.css
+++ b/src/main/resources/static/css/admin/adminManager.css
@@ -13,6 +13,7 @@
   background-color: #EFEFEF;
   font-family: 'Pretendard-Regular';
   box-sizing: border-box;
+  border: 1px black solid;
 }
 
 html, body {
