checkCart,delete,reviewPageNai

--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -220,6 +220,8 @@
         <!-- 끝 페이지로 이동 -->
         <li><a href="#">&gt;&gt;</a></li>
       </ul>
+
+    </div>
   </main>
   <script th:inline="javascript">
    const pagination = /*[[${pagination}]]*/ {};
