--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -89,7 +89,7 @@
         <button class="selectBookOrderBtn" id="orderButton">선택한 상품 주문</button>
       </section>
     </div>
-    <!-- <section class="cartRecommendContainer">
+    <section class="cartRecommendContainer">
       <h2>추천 도서</h2>
       <div class="recommendWrapperContainer">
         <div class="recommendation-wrapper" id="scroll-container">
@@ -177,7 +177,7 @@
           <div class="scroll-bar"></div>
         </div>
       </div>
-    </section> -->
+    </section>
   </main>
       
             <div th:replace="~{common/footer :: footer}"></div>
