--- a/src/main/resources/static/css/cart/cart.css
+++ b/src/main/resources/static/css/cart/cart.css
@@ -12,9 +12,11 @@
 }
 
 .cartMain {
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
-  margin-left: 10%;
+  margin-left: 20%;
+  margin-bottom: 100px;
 }
 
 .cartContainer {
@@ -30,10 +32,12 @@
 
 .cartSection {
   width: 70%; 
+  margin-bottom: 150px;
 }
 
 .cartOrderSection {
-  width: 25%; 
+  width: 18%; 
+  min-width: 274px;
   height: fit-content;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
@@ -43,7 +47,7 @@
   position: sticky;
   top: 10px;
   margin-top: 100px;
-  margin-right: 15px;
+  margin-right: 50px;
 }
 
 /* 장바구니 테이블 스타일 */
@@ -303,9 +307,11 @@
 }
 
 
+
+
 /* 추천 도서 목록 */
 .cartRecommendContainer {
-  width: 100%;
+  width: 75%;
   margin-top: 20px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
