--- a/src/main/resources/templates/myPage/preference.html
+++ b/src/main/resources/templates/myPage/preference.html
@@ -39,24 +39,27 @@
         <h3 class="menu">
           <i class="fa-solid fa-users"></i>&nbsp;&nbsp;내 정보
           <ul class="submenu">
-            <li><a href="/myPage/info">&nbsp;&nbsp;&nbsp;-&nbsp;내 정보 보기</a></li>
-            <li><a href="/myPage/preference">&nbsp;&nbsp;&nbsp;-&nbsp;내 취향 보기</a></li>
+            <li><a href="/myPage/info">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 정보 보기/변경</a></li>
+            <li><a href="/myPage/changePw">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;비밀번호 변경</a></li>
+            <li><a href="/myPage/preference">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 취향 보기</a></li>
+            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 취향으로 검색</a></li>
           </ul>
         </h3>
 
         <h3 class="menu">
           <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;구매 및 배송
           <ul class="submenu">
-            <li><a href="">&nbsp;&nbsp;&nbsp;-&nbsp;구매 내역 조회</a></li>
-            <li><a href="">&nbsp;&nbsp;&nbsp;-&nbsp;내 취향대로 검색</a></li>
+            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;구매 내역 조회</a></li>
+
           </ul>
         </h3>
 
         <h3 class="menu">
           <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;내 활동 내역
           <ul class="submenu">
-            <li><a href="">&nbsp;&nbsp;&nbsp;-&nbsp;내가 쓴 문의</a></li>
-            <li><a href="">&nbsp;&nbsp;&nbsp;-&nbsp;내가 쓴 리뷰</a></li>
+            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;문의내역</a></li>
+            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;리뷰내역</a></li>
+            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;찜 목록</a></li>
           </ul>
         </h3>
       </div>
@@ -153,7 +156,6 @@
   </div>
   <footer th:replace="~{common/footer :: footer}"></footer>
   <script src="/js/myPage/preference.js"></script>
-  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js" defer></script>
 </body>
 
